--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:file:~/db
 spring.datasource.username=sa
 spring.datasource.password=
 
