Postgres database, batch inserts, transactions, updated dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,25 @@
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/db
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:~/db
+#spring.datasource.username=sa
+#spring.datasource.password=
 
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://wso2db.localdomain:5432/portfolio
+spring.datasource.username=investment
+spring.datasource.password=investment
+
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.data-source-properties.reWriteBatchedInserts=true
+
+spring.flyway.schemas=public
+spring.flyway.clean-on-validation-error=true
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.jdbc.batch_size=500
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.format_sql=true
