--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.h2.console.enabled=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://wso2db.localdomain:5432/portfolio
+spring.datasource.url=jdbc:postgresql://wso2db.jaktoviditoka.cz:5432/portfolio
 spring.datasource.username=investment
 spring.datasource.password=investment
 
