cmc api, kraken api update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.h2.console.enabled=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://wso2db.jaktoviditoka.cz:5432/portfolio
+spring.datasource.url=jdbc:postgresql://wso2db.tomastokamrazek.cz:5432/portfolio
 spring.datasource.username=investment
 spring.datasource.password=investment
 
@@ -17,7 +17,7 @@ spring.datasource.hikari.data-source-properties.reWriteBatchedInserts=true
 spring.flyway.schemas=public
 spring.flyway.clean-on-validation-error=true
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.jdbc.batch_size=500
 spring.jpa.properties.hibernate.order_inserts=true
