--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
+        <version>2.4.4</version>
     </parent>
 
     <properties>
         <java.version>11</java.version>
-        <modelmapper.version>2.3.8</modelmapper.version>
+        <modelmapper.version>2.3.9</modelmapper.version>
         <commons-text.version>1.9</commons-text.version>
         <commons-csv.version>1.8</commons-csv.version>
-        <guava.version>29.0-jre</guava.version>
+        <guava.version>30.1.1-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
